--- a/css/app.css
+++ b/css/app.css
@@ -51,6 +51,10 @@ h3 {
   background-color: rgb(134, 132, 132);
 }
 
+.btn-secundario:hover {
+  background-color: rgb(172, 172, 172);
+}
+
 .ejemplo {
   font-size: 16px;
 }
@@ -142,6 +146,7 @@ nav ul a:hover {
 .servicios .tipo-servicios i {
   font-size: 30px;
   color: #6495ed;
+  padding: 20px;
 }
 
 footer {
